--- a/style.css
+++ b/style.css
@@ -2111,6 +2111,17 @@ h6 {
     margin-bottom: .1rem;
 }
 
+.volunteer-bg {
+    background: url(img/sick-dog.png) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    height: auto;
+    margin-bottom: .1rem;
+}
+
 .donate-home {
     background: url(img/glass-dog.png) no-repeat center center;
     -webkit-background-size: cover;
@@ -2206,7 +2217,7 @@ label {
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     pointer-events: none;
-    font-size: 22px;
+    font-size: 15px;
 }
 
 label .req {
@@ -2235,7 +2246,7 @@ textarea {
     display: block;
     width: 100%;
     height: 100%;
-    padding: 5px 10px;
+    padding: 3px 10px;
     background: none;
     background-image: none;
     border: 1px solid #a0b3b0;
@@ -2793,7 +2804,7 @@ textarea {
     display: block;
     width: 100%;
     height: 100%;
-    padding: 5px 10px;
+    padding: 4px 10px;
     background: none;
     background-image: none;
     background-image: none;
@@ -3161,14 +3172,14 @@ hr.gray {
 
 @media only screen and (max-width: 767px) {
     label {
-        font-size: 13px;
+        font-size: 9px;
     }
     .button-block {
         display: block;
         width: 50%;
     }
     .required {
-        font-size: 13px !important;
+        font-size: 9px !important;
     }
     .details li a {
         font-weight: 600;
